WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162418
Fix serialization of HTML void elements when they have children
https://bugs.webkit.org/show_bug.cgi?id=162418
Summary
Fix serialization of HTML void elements when they have children
Chris Dumez
Reported
2016-09-22 10:52:30 PDT
Fix serialization of HTML void elements when they have children. Void elements (such as <hr>) cannot have a closing tag. When encountering them, we properly do not serialize the void element's children, however, we incorrectly append an end tag (because the element technically has children). Relevant specification: -
https://html.spec.whatwg.org/#html-fragment-serialisation-algorithm
"" If current node is an area, base, basefont, bgsound, br, col, embed, frame, hr, img, input, keygen, link, meta, param, source, track or wbr element, then continue on to the next child node at this point. "" Firefox matches the specification.
Attachments
Patch
(33.52 KB, patch)
2016-09-22 11:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-22 11:03:24 PDT
Created
attachment 289579
[details]
Patch
WebKit Commit Bot
Comment 2
2016-09-22 11:49:50 PDT
Comment on
attachment 289579
[details]
Patch Clearing flags on attachment: 289579 Committed
r206266
: <
http://trac.webkit.org/changeset/206266
>
WebKit Commit Bot
Comment 3
2016-09-22 11:49:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug